# opengl_playground

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  configure.sh  imgui.ini  main.cpp
.cache/clangd/index/: _fixes.hpp.DC06B4C917BF79C1.idx  _vectorize.hpp.890DAB1F3C72A931.idx  common.hpp.CF59480205345929.idx  compute_common.hpp.5584A3FE989693BE.idx  compute_vector_relational.hpp.F838164DA467123F.idx  constants.hpp.52CBE7C02FC8653F.idx  constants.inl.608E48DC8ADD17B7.idx  epsilon.hpp.1DFB5AA47CDB976A.idx  epsilon.inl.B57A4632D614670F.idx  exponential.hpp.F42845417FA8E139.idx  func_common.inl.79BE91431B10F6E4.idx  func_exponential.inl.C071AAE4B877432D.idx  func_geometric.inl.8658C58296C81179.idx  func_matrix.inl.4D7F4924899B50EC.idx  func_trigonometric.inl.BAB54EC8F7E854D5.idx  func_vector_relational.inl.97AE60F4E47AAAC3.idx  geometric.hpp.B3FBCE979FD29E1B.idx  glad.c.CD7B8DBBC85C0BB3.idx  glad.h.BC5768D5710DDA9A.idx  input_manager.cpp.CBEDAC928B4D47CF.idx  input_manager.hpp.4B92DB4419CAE926.idx  khrplatform.h.58F17F7292B59D89.idx  logger.cpp.D4B44FAF7C86D9B6.idx  logger.hpp.B58B5FE2C6A18EAD.idx  main.cpp.E359BAADD4544481.idx  mat2x2.hpp.18CC281C069FA253.idx  mat2x3.hpp.8F86B0131E93446A.idx  mat2x4.hpp.03C1276F48AEB338.idx  mat3x2.hpp.C99FB6458553B6EC.idx  mat3x3.hpp.93599C54B2B081C3.idx  mat3x4.hpp.B72181775971A37B.idx  mat4x2.hpp.11E5D45B6F5D13FE.idx  mat4x3.hpp.E26F8E7EF35CC72D.idx  mat4x4.hpp.FD49524C7FB47DEF.idx  matrix.hpp.2F78EB3BC91864DC.idx  matrix_clip_space.hpp.2E34C09A55F3862E.idx  matrix_clip_space.inl.C0AD2F1F4EBFBDDD.idx  matrix_double2x2.hpp.6899380907C0FBCF.idx  matrix_double2x2_precision.hpp.9C42963F4D8005F4.idx  matrix_double2x3.hpp.854038E5C860D1AF.idx  (+149 more)
app/: CMakeLists.txt  main.cpp
app2/: CMakeLists.txt  batch.cpp  sandbox.cpp
assets/: circle.vert  cube_fragment.glsl  cube_fragment_textured.glsl  default.frag  default.vert  light_source_fragment.glsl  light_source_vertex.glsl  lighting_fragment.glsl  lighting_fragment_gouraud.glsl  lighting_fragment_view.glsl  lighting_vertex.glsl  lighting_vertex_gouraud.glsl  lighting_vertex_view.glsl  quad_fragment.glsl  quad_vertex.glsl  simple.vert
assets/shaders/: a_fragment.glsl  a_vertex.glsl  basic_model_fragment.glsl  basic_model_vertex.glsl  circle.frag  circle.vert  circle_frag.glsl  circle_vert.glsl  color_correction_example_frag.glsl  colored_object_fragment.glsl  colored_object_vertex.glsl  colored_quad_vert.glsl  combined_lights_fragment.glsl  cube_vertex.glsl  cube_vertex_textured.glsl  default.frag  default.vert  depth_fragment.glsl  directional_light_fragment.glsl  explode_fragment.glsl  explode_geometry.glsl  explode_vertex.glsl  gamma_fragment.glsl  generic_cube_vertex.glsl  geom.glsl  geometry_fragment.glsl  geometry_geometry.glsl  geometry_normals_fragment.glsl  geometry_normals_geometry.glsl  geometry_normals_vertex.glsl  geometry_vertex.glsl  instancing_planet_vertex.glsl  instancing_quads_vertex.glsl  light_source_fragment.glsl  light_source_vertex.glsl  lighting_fragment_view.glsl  lighting_vertex_view.glsl  line_frag.glsl  line_fragment.glsl  line_vert.glsl  (+41 more)
assets/shaders/batch_instance/: batch_frag.glsl  instance_frag.glsl  instance_vert.glsl
assets/shaders/color_correction/: blur_frag.glsl  lighting_frag.glsl  point_light_bloom_frag.glsl  screen_frag.glsl  screen_vert.glsl
assets/shaders/compute/: hello.comp
assets/shaders/deferred/: deferred_lighting_frag.glsl  gbuffer_frag.glsl  light_frag.glsl  lighting_frag.glsl  lighting_vert.glsl  screen_frag.glsl
assets/shaders/lighting/: lf.glsl  light_fragment.glsl  light_vertex.glsl
assets/shaders/multisampled/: a.glsl  b.glsl  default_vert.glsl  vert_multisampled.glsl
assets/shaders/shadow/: sv.glsl
engine/: CMakeLists.txt
engine/include/: application.hpp  graphics.hpp  initializer.hpp  input_manager.hpp  logger.hpp  mesh.hpp  peria_color.hpp  peria_input.hpp  peria_types.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_types.hpp  window.hpp  window_settings.hpp
engine/include/peria_engine/: application.hpp  peria_color.hpp  peria_engine.hpp
engine/public/: engine.hpp
engine/src/: application.cpp  graphics.cpp  graphics_impl.cpp  graphics_impl.hpp  initializer.cpp  input_manager.cpp  logger.cpp  mesh.cpp  named_buffer_object.hpp  shader.cpp  shader.hpp  texture.cpp  vertex_array.cpp  vertex_array.hpp  window.cpp
include/general/: input_manager.hpp  mesh.hpp  shader.hpp
playground/: CMakeLists.txt
sandbox/: CMakeLists.txt  sandbox.cpp
src/: app.cpp  app.hpp  asset_cache.cpp  asset_cache.hpp  asset_manager.cpp  asset_manager.hpp  attenuation.hpp  cam2d.cpp  cam2d.hpp  camera.cpp  camera.hpp  common_models.hpp  demo.cpp  demo.hpp  entity.hpp  frame_buffer.cpp  frame_buffer.hpp  gl_errors.hpp  graphics.cpp  graphics.hpp  input_manager.cpp  input_manager.hpp  light_data.hpp  materials.hpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  named_buffer_object.cpp  named_buffer_object.hpp  peria_color.hpp  platonic_solids.hpp  proj.hpp  render_buffer.cpp  render_buffer.hpp  sampler.cpp  sampler.hpp  shader.cpp  (+13 more)
src/app/: main.cpp
src/batch_test/: batch.cpp
src/general/: input_manager.cpp  mesh.cpp
test_app/: CMakeLists.txt  application.cpp  application.hpp  graphics.cpp  graphics.hpp  index_buffer.hpp  main.cpp  named_buffer_object.hpp  peria_color.hpp  peria_types.hpp  shader.cpp  shader.hpp  simple_logger.hpp  vertex_array.cpp  vertex_array.hpp
